# language_app

./: README.md
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 576c9c577b17_baseline.py
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 90bcd4523b75_add_competency_tracking.py  b444650a223f_initial_schema.py
backend/app/api/: quiz.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  attempt.py  competency.py  competency_dependency.py  essay_submission.py  question.py  quiz_session.py  user.py  user_competency.py
backend/app/services/: grading.py  progress.py  quiz_engine.py
backend/helper_functions/: helper.py
backend/scripts/: generate_questions.py  seed_competencies.py  seed_dev_user.py  test_script.py
language-quiz-ui/: package-lock.json  package.json
language-quiz-ui/app/: page.tsx
language-quiz-ui/app/quiz/[sessionId]/: page.tsx
language-quiz-ui/components/: QuestionRenderer.tsx
language-quiz-ui/lib/: api.ts
